# cchistory

./: .gitignore  README.md  pyproject.toml
src/claude_history/: __init__.py  builder.py  cli.py  discovery.py  html_export.py  markdown_export.py  model.py  opener.py  parser.py  server.py
src/claude_history/assets/: style.css
src/claude_history/templates/: conversation.html  index.html
tests/: conftest.py  test_builder.py  test_discovery.py  test_markdown_export.py  test_model.py  test_parser.py  test_resume_export.py  test_ui_style.py
