[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-backup"
version = "0.1.0"
description = "Backup and browse Claude Code conversation history offline."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "markdown>=3.6",
]
authors = [
    { name = "Claude Backup Contributors" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Environment :: Console",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
claude-backup = "claude_backup.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claude_backup = ["templates/*.html", "assets/*.css"]

